--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
   "name": "react_frontend_beteg",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
+    "@hcaptcha/react-hcaptcha": "^1.12.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
+    "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "bootstrap": "^5.3.3",
+    "bootstrap": "^5.3.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "i18next": "^24.2.2",
-    "react": "^19.0.0",
+    "i18next": "^25.0.0",
+    "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
     "react-bootstrap-icons": "^1.11.5",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.1.0",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
+    "typescript": "5.7.3",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
@@ -49,8 +51,6 @@
     "tailwindcss": "^3.4.17"
   },
   "overrides": {
-    "nth-check": "2.1.1",
-    "postcss": "8.5.3",
-    "serialize-javascript": "6.0.2"
+    "nth-check": "2.1.1"
   }
 }
