--- a/package.json
+++ b/package.json
@@ -3,23 +3,24 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "@hcaptcha/react-hcaptcha": "^1.12.0",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
+    "@hcaptcha/react-hcaptcha": "^1.13.0",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "bootstrap": "^5.3.5",
+    "bootstrap": "^5.3.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "i18next": "^25.0.0",
-    "react": "^19.1.0",
-    "react-bootstrap": "^2.10.9",
-    "react-bootstrap-icons": "^1.11.5",
-    "react-dom": "^19.1.0",
-    "react-i18next": "^15.4.1",
+    "force": "^0.0.3",
+    "i18next": "^25.6.0",
+    "react": "^19.2.0",
+    "react-bootstrap": "^2.10.10",
+    "react-bootstrap-icons": "^1.11.6",
+    "react-dom": "^19.2.0",
+    "react-i18next": "^16.1.4",
     "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
-    "typescript": "5.7.3",
+    "typescript": "5.9.3",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
@@ -47,10 +48,11 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^3.5.2",
+    "prettier": "^3.5.3",
     "tailwindcss": "^3.4.17"
   },
   "overrides": {
-    "nth-check": "2.1.1"
+    "nth-check": "2.1.1",
+    "form-data" : "4.0.4"
   }
 }
