--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-i18next": "^16.1.4",
     "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
+    "serve": "^14.2.5",
     "typescript": "5.9.3",
     "web-vitals": "^4.2.4"
   },
@@ -54,6 +55,6 @@
   },
   "overrides": {
     "nth-check": "2.1.1",
-    "form-data" : "4.0.4"
+    "form-data": "4.0.4"
   }
 }
